@@ -68,17 +68,6 @@ EOF;
    */
   protected function execute($arguments = array(), $options = array())
   {
-    if (
-      !$options['no-confirmation']
-      &&
-      !$this->askConfirmation(array('This command will remove all data in your database.', 'Are you sure you want to proceed? (y/N)'), 'QUESTION_LARGE', false)
-    )
-    {
-      $this->logSection('propel', 'Task aborted.');
-
-      return 1;
-    }
-
     $this->schemaToXML(self::DO_NOT_CHECK_SCHEMA, 'generated-');
     $this->copyXmlSchemaFromPlugins('generated-');
 
@@ -101,6 +90,22 @@ EOF;
       }
 
       $sqls[$connection][] = $file;
+    }
+
+    if (
+      !$options['no-confirmation']
+      &&
+      !$this->askConfirmation(array(
+          'WARNING: The data in the database'.(count($sqls) > 1 ? 's' : '').' related to the connection name'.(count($sqls) > 1 ? 's' : ''),
+          sprintf('         %s will be removed.', implode(', ', array_keys($sqls))),
+          '',
+          'Are you sure you want to proceed? (y/N)',
+        ), 'QUESTION_LARGE', false)
+    )
+    {
+      $this->logSection('propel', 'Task aborted.');
+
+      return 1;
     }
 
     $this->tmpDir = sys_get_temp_dir().'/propel_insert_sql_'.rand(11111, 99999);
